# pocket_to_wallabag

./: .gitignore  README.md  _env_template  pyproject.toml  requirements.txt  set_env.bat
pocket_to_wallabag/: importer.py  settings.py
